# rust_crud

./: .gitignore  Cargo.toml  docker-compose.yml
src/: main.rs  models.rs
