[package]
name = "rust_crud"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4.0"
actix-rt = "2.5"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
env_logger = "0.9"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres" ] }
syn = { version = "1.0", features = ["full"] }
